--- a/index.html
+++ b/index.html
@@ -241,6 +241,10 @@
     <img src="icons/buster.png" alt=" Buster Jam">
     <span>Buster Jam</span>
   </div>
+  <div class="icon" style="top:350px; left:460px;" data-file="They Are Coming.html" data-title="They Are  ">
+    <img src="icons/coming.png" alt="They Are Coming">
+    <span>They Are Coming</span>
+  </div>
 
 
   <!-- Popup Window -->
