--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
     <img src="icons/buster.png" alt=" Buster Jam">
     <span>Buster Jam</span>
   </div>
-  <div class="icon" style="top:350px; left:460px;" data-file="They Are Coming.html" data-title="They Are  ">
+  <div class="icon" style="top:350px; left:460px;" data-file="They Are Coming.html" data-title="They Are Coming">
     <img src="icons/coming.png" alt="They Are Coming">
     <span>They Are Coming</span>
   </div>
